2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-825

	* src/m_microphysics.cc (psdMgd): A general treatment of MGD for
	the case when the native paraneters are used (i.e. n0, mu, la and ga).

	(psdExpN0Lambda): Removed.

	* src/m_microphysics.cc (psdMH97,psdF07, psdW16): Now using an
	even more genral macro for initial part of function.

	* src/microphysics.cc (psd_general_MGD): Revised and extended. Can
	now also return the derivative with respect to n0, mu, la and ga.

2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-824

	* src/m_microphysics.cc (psdMgd1free, psdExpN0Lambda): Started to
	play around with how to implement MGD PSDs in a relatively general
	manner. But so far just test coding.

	* src/m_microphysics.cc (psdMH97,psdF07, psdW16): Removed demand
	that input must have a specific name. Start of methods now handled
	by a common macro. Added check of t_min vs t_max.

2017-10-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-823

	* src/m_fos.cc (iyHybrid), rte.cc (get_stepwise_clearsky_propmat):
	Some further proper initializations. Cleanup.

	* src/partial_derivatives.h:
	Added missing extern const declaration for SCATSPECIES_MAINTAG (needed
	now in get_stepwise_clearsky_propmat and all other jacobian tags seem to
	be drawn from there).

	* src/m_jacobian.cc (jacobianDoit, jacobianDoitAddSpecies):
	Consider cloudbox-at-TOA case. Bugfix jacobian sizing for
	cloudbox-not-at-surface case.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Work in progress, trying to get comparable setups for iyHybrid and
	JacobianDoit jacobians.

	* controlfiles/artscomponents/wfuns/TestDoitJacobians.arts:
	Fixed bug introduced in arts-2-3-820.

2017-10-06 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-822

	- Dummy change to trigger Hudson build.

2017-10-06 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-821

	* oem.h(ArtsLog):