@@ -12414,6 +12414,15 @@ void define_md_data_raw()
          "*pnd_agenda_input* and the number of non-NaN choices for n0, mu, la and\n"
          "ga must add up to four.\n"
          "\n"
+         "Data in *pnd_agenda_input* are linked to the MGD parameters in term of\n"
+         "order, the naming in *pnd_agenda_input_names* is free. If all four\n"
+         "parameteras are specified by *pnd_agenda_input*, the data in the first\n"
+         "column are taken as n0, the second column as mu etc. If a parameter\n"
+         "is given as a GIN argument, the columns are just shifted with one position.\n"
+         "For example, if mu and ga are specified as GIN arguments, *pnd_agenda_input*\n"
+         "shall have two columns, with n0-values in the first one and la-values in\n"
+         "the second one.\n"
+         "\n"
          "The GIN option is especially suitable for selecting special cases of MGD.\n"
          "For example, by setting mu=0 and ga=1, an exponential PSD is obtained:\n"
          "   n(x) = n0 * exp( -la*x )\n"
@@ -12422,6 +12431,9 @@ void define_md_data_raw()
          "There should be little overhead in using the method for exponential\n"
          "and gamma PSD, there is an internal switch to dedicated expressions for\n"
          "those PSDs.\n"
+         "\n"
+         "Derivatives can only be obtained for parameters that are specified by\n"
+         "*pnd_agenda_input* (GIN specified parameters are treated as constants).\n"
          "\n"
          "If temperature is outside [*t_min*,*t_max*] psd=0 and dpsd=0 if\n"
          "picky=0, or an error is thrown if picky=1.\n"
