@@ -1,5 +1,11 @@
 2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-826
+
+	* src/methods.cc (define_md_data_raw): Extended doc for psdMgd.
+
+2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-825
 
 	* src/m_microphysics.cc (psdMgd): A general treatment of MGD for
